--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,7 @@ $brand-color:      #0077CC;
 // $gameday-sky: #109dc0;
 $clemson-purple:      #522d80;
 $clemson-orange:      #f66733;
-$header-color:		  #94859b;
+$header-color:		  #34495c;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
