--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,7 @@ $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #0077CC;
 // $gameday-sky: #109dc0;
-$clemson-purple:      #522d80;
+$clemson-purple:      #244360;
 $clemson-orange:      #f66733;
 $header-color:		  #34495c;
 
